fixes calls to a deprecated method in Java 9.