@@ -35,7 +35,7 @@ public class ProxySimpleTest extends TestCase {
                 return proceed.invoke(self, args);  // execute the original method.
             }
         };
-        Foo foo = (Foo)c.newInstance();
+        Foo foo = (Foo)c.getConstructor().newInstance();
         ((Proxy)foo).setHandler(mi);
         testResult = "";
         foo.foo(1);
@@ -60,7 +60,7 @@ public class ProxySimpleTest extends TestCase {
         };
         ProxyFactory pf = new ProxyFactory();
         pf.setSuperclass(ReadWriteData.class);
-        Object data = pf.createClass().newInstance();
+        Object data = pf.createClass().getConstructor().newInstance();
         // Object data = new ReadWriteData();
         ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(fileName));
         oos.writeObject(data);
@@ -81,12 +81,12 @@ public class ProxySimpleTest extends TestCase {
     public void testWriteReplace() throws Exception {
         ProxyFactory pf = new ProxyFactory();
         pf.setSuperclass(WriteReplace.class);
-        Object data = pf.createClass().newInstance();
+        Object data = pf.createClass().getConstructor().newInstance();
         assertEquals(data, ((WriteReplace)data).writeReplace());
 
         ProxyFactory pf2 = new ProxyFactory();
         pf2.setSuperclass(WriteReplace2.class);
-        Object data2 = pf2.createClass().newInstance();
+        Object data2 = pf2.createClass().getConstructor().newInstance();
         Method meth = data2.getClass().getDeclaredMethod("writeReplace", new Class[0]);
         assertEquals("javassist.util.proxy.SerializedProxy",
                     meth.invoke(data2, new Object[0]).getClass().getName());
@@ -97,7 +97,7 @@ public class ProxySimpleTest extends TestCase {
     }
 
     public static class WriteReplace2 implements Serializable {
-        public Object writeReplace(int i) { return new Integer(i); }
+        public Object writeReplace(int i) { return Integer.valueOf(i); }
     }
 
     String value244;
@@ -156,7 +156,7 @@ public class ProxySimpleTest extends TestCase {
                 return proceed.invoke(self, args);  // execute the original method.
             }
         };
-        Default3 foo = (Default3)c.newInstance();
+        Default3 foo = (Default3)c.getConstructor().newInstance();
         ((Proxy)foo).setHandler(mi);
         foo.foo();
         foo.bar();
@@ -176,7 +176,7 @@ public class ProxySimpleTest extends TestCase {
                 return proceed.invoke(self, args);  // execute the original method.
             }
         };
-        Default2 foo = (Default2)c.newInstance();
+        Default2 foo = (Default2)c.getConstructor().newInstance();
         ((Proxy)foo).setHandler(mi);
         foo.foo();
         foo.bar();
